@@ -63,7 +63,8 @@ Version 4.6  [ (under development) ]
           things, this makes extracting the dehydration string much simpler.
     TEST SUITE:
         - Added very thorough tests for NPerm.
-        - Additional tests for triangulation simplification.
+        - Additional tests for triangulation simplification and Euler
+          characteristic.
         - New tests for the recognition of families of standard triangulations
           and manifolds.
         - New tests that enumerate automorphisms of triangulations and
